loading spinner at memberList

--- a/mitglieder-liste.html
+++ b/mitglieder-liste.html
@@ -34,6 +34,9 @@
                 </p>
             </div>    
         </div>
+        <div  id="spinner" class="d-flex d-none justify-center align-center margin-top-30px margin-bottom-30px">
+            <div class="loader"></div>
+        </div>    
         <div class="mobile-hide" id="allMemberList"></div>
     </div>
 
