--- a/mitglieder-liste.html
+++ b/mitglieder-liste.html
@@ -15,7 +15,7 @@
 
 </head>
 <!--https://flagicons.lipis.dev/-->
-<body onload="init()" class="bg-page">
+<body class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
@@ -34,10 +34,16 @@
                 </p>
             </div>    
         </div>
-        <div  id="spinner" class="d-flex d-none justify-center align-center margin-top-30px margin-bottom-30px">
+        <div class="d-flex justify-center align-center">
+            <div id="memberlist-container"  class="d-flex w-50 flex-wrap justify-center align-center margin-top-30px margin-bottom-30px"></div>
+            <div id="loading-spinner">
+                <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+            </div>
+        </div>
+        <!-- <div  id="spinner" class="d-flex d-none justify-center align-center margin-top-30px margin-bottom-30px">
             <div class="loader"></div>
         </div>    
-        <div class="mobile-hide" id="allMemberList"></div>
+        <div class="mobile-hide" id="allMemberList"></div> -->
     </div>
 
     <div class="d-flex w-100 justify-center  margin-top-30px margin-bottom-30px">
