--- a/cb-swr.html
+++ b/cb-swr.html
@@ -32,7 +32,7 @@
             <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
                 <img class="cable" src="./assets/img/kodax-02.gif" alt="">
             </div>
-            <div class="mobile-hide">
+            <div class="mobile-hide d-flex align-center column">
                 <div class="w-50">
                     <p>
                         <strong>
