--- a/ct-today.html
+++ b/ct-today.html
@@ -35,7 +35,7 @@
             <h3>Wolfgang Müller</h3>
             Bissendorf<br>
             <br>
-            Betreiber und Webmaster
+            Betreiber
         </p>
     </div>    
 </div>
