--- a/freie-funknetze.html
+++ b/freie-funknetze.html
@@ -46,7 +46,7 @@
                     Das gilt für AM , FM und auch für SSB.
                 </p>
             </div>
-            <div class="d-flex column w-70">
+            <div class="d-flex column w-70 align-center">
                 <div class="d-flex radio-content-container">
                     <div>
                         Frequenz:
@@ -148,7 +148,7 @@
                 </p>
             </div>
 <!---->            
-            <div class="d-flex column w-70">
+            <div class="d-flex column w-70 align-center">
                 <div class="d-flex radio-content-container">
                     <div>
                         Frequenz:
@@ -242,7 +242,7 @@
                 </p>
             </div>
             
-            <div class="d-flex column w-70">
+            <div class="d-flex column w-70 align-center">
                 <div class="d-flex radio-content-container">
                     <div>
                         Frequenz:
@@ -335,7 +335,7 @@
                 </p>
             </div>
 
-            <div class="d-flex column w-70">
+            <div class="d-flex column w-70 align-center">
                 <div class="d-flex radio-content-container">
                     <div>
                         Frequenz:
