--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
     <link rel="stylesheet" href="./assets/css/newheader.css">
     <script src="./assets/javascript/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <!-- Add the new slick-theme.css if you want the default styling -->
+    <link rel="stylesheet" type="text/css" href="./assets/slick-1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/slick-1.8.1/slick/slick-theme.css"/>
+
 </head>
-<body onload="loadHeader()" class="bg-page"><!--loadHeader()-->
+<body class="bg-page">
     <!--Navbar Top-->
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Open Navbar fullPage-->
     <div w3-include-html="./assets/template/navbar.html"></div>
     <!--Header-->
-    <!-- <div w3-include-html="./assets/template/newheader.html"></div> -->
+    <!--Image-Slider-Slick-->
     <div id="headerImageContainer" class="header-container">
         <div class="image-silder">
-            <div class=""><img id="silderImg" class="index-image-slider bounce-in-top"  src="./assets/img/antenne2.png" alt=""></div>
-            <!-- <div class=""><img class="index-image-slider" src="./assets/img/antenne1.png" alt=""></div>
             <div class=""><img class="index-image-slider" src="./assets/img/antenne2.png" alt=""></div>
-            <div class=""><img class="index-image-slider" src="./assets/img/antenne3.png" alt=""></div> -->
+            <div class=""><img class="index-image-slider" src="./assets/img/cb1.jpeg" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/antenne3.png" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/cb2.jpeg" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/cb3.jpeg" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/antenne1.png" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/cb4.jpeg" alt=""></div>
         </div>    
         <div class="txt-cont bounce-in-top">
             <h1>
@@ -111,11 +118,13 @@
     </div>
     <!--Footer-->
     <div w3-include-html="./assets/template/footer.html"></div>
-
     <script>
         includeHTML();
     </script> 
-       
-
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="./assets/javascript/slick.min.js"></script>
+    <script src="./assets/javascript/image-slider.js"></script>
 </body>
 </html>
