--- a/mitglieder-liste.html
+++ b/mitglieder-liste.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css" />
     <script src="./assets/javascript/main.js"></script>
     <script src="./assets/javascript/member-list.js"></script>
+    <!--jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+
+    
 </head>
 <!--https://flagicons.lipis.dev/-->
 <body class="bg-page">
