--- a/neue-mitglieder.html
+++ b/neue-mitglieder.html
@@ -26,11 +26,10 @@
 
     <div class="d-flex justify-center align-center margin-top-30px margin-bottom-30px">
         <div  class="welcome-text txt-center w-50">
-            <h2 class="mobile-hide">Seit Bekannt ist das es CharlyTango wieder gibt.<br> 
-                Sind folgende Mitglieder NEU dazu gekommen!</h2>
-                <h2 class="mobile-d-flex d-none">Tabellen sind Mobil nicht verfügbar.<br>
-                schau gerne in der Desktop Version vorbei</h2>
-            <div class="d-flex justify-center mobile-hide">    
+            <h2 class="txt-center"> Seit Bekannt ist das es CharlyTango wieder gibt. 
+                                    Sind folgende Mitglieder NEU dazu gekommen!
+            </h2>
+            <div class="d-flex justify-center align-center">    
                 <table class="txt-center">
                     <thead>    
                         <tr>
