--- a/cb-abkürzung.html
+++ b/cb-abkürzung.html
@@ -20,20 +20,18 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <div class="d-flex w-30 column justify-center margin-bottom-30px">
-                    <p class="mobile-hide">
+            <div class="d-flex w-50 column justify-center margin-bottom-30px">
+                    <p class="">
                         <strong>
                             Q-Codes
                         </strong>
                     </p>
-                    <p class="mobile-hide">
+                    <p class="">
                         Diese Q-Codes werden im CB-Funk Verkehr oft benutzt.    
                         Im Amateurfunk dagegen werden 30 bis 60 Q-Codes verwendet.
                     </p>
-                    <h2 class="mobile-d-flex d-none">Tabellen sind Mobil nicht verfügbar.<br>
-                        schau gerne in der Desktop Version vorbei</h2>    
             </div>
-            <div class="d-flex w-50 justify-center mobile-hide">
+            <div class="d-flex w-50 justify-center ">
                 <table class="qCode">
                     <thead>
                         <tr>
@@ -127,14 +125,14 @@
             </div>
             
 
-            <div class="mobile-hide">
+            <div class="">
                 <p>
                     <strong>
                         Abkürzungen
                     </strong>
                 </p>
             </div>
-            <div class="d-flex w-50 justify-center mobile-hide">
+            <div class="d-flex w-50 justify-center ">
                 <table class="qCode">
                     <thead>
                         <tr>
@@ -426,7 +424,7 @@
                     </tbody>    
                 </table>
             </div>
-            <div class="mobile-hide w-50">
+            <div class=" w-50">
                 <p>
                     <strong>
                         Geheimcodes 
@@ -434,7 +432,7 @@
                 </p>
             </div>
 
-            <div class="d-flex w-50 justify-center mobile-hide">
+            <div class="d-flex w-50 justify-center ">
                 <table class="qCode">
                     <thead>
                         <tr>
@@ -638,7 +636,7 @@
                 </table> 
             </div>
 
-            <div class="mobile-hide w-50">
+            <div class=" w-50">
                 <p>
                     <strong>
                         Zahlen 
@@ -646,7 +644,7 @@
                 </p>
             </div>
 
-            <div class="d-flex w-50 justify-center mobile-hide">
+            <div class="d-flex w-50 justify-center ">
                 <table class="qCode">
                     <thead>
                         <tr>
@@ -685,7 +683,7 @@
                 </table>
             </div>
 
-            <div class="w-50 mobile-hide">
+            <div class="w-50 ">
                 <p>
                     <strong>
                         R/S-Codes 
@@ -699,7 +697,7 @@
                 </p>
             </div>
 
-            <div class="d-flex w-50 justify-center mobile-hide">
+            <div class="d-flex w-50 justify-center ">
                 <table class="qCode">
                     <thead>
                         <tr>
@@ -729,7 +727,7 @@
                 </table>    
             </div>
 
-            <div class="w-50 mobile-hide">
+            <div class="w-50 ">
                 <p>
                     <strong>
                         Santiago-Werte 
@@ -738,7 +736,7 @@
             
             </div>
 
-            <div class="d-flex w-50 justify-center mobile-hide">
+            <div class="d-flex w-50 justify-center ">
                 <table class="qCode">
                     <thead>
                         <tr>
