--- a/cb-mikrofon-belegung.html
+++ b/cb-mikrofon-belegung.html
@@ -21,8 +21,8 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2 class="mobile-d-flex d-none">Tabellen sind Mobil nicht verfügbar.<br>
-                schau gerne in der Desktop Version vorbei</h2>
+            <h2 class="mobile-d-flex d-none" style="padding: 10px;">Diese Tabelle ist Mobil nicht verfügbar.<br>
+                Schau gerne in der Desktop Version vorbei!</h2>
             <img class="microphone-assignment margin-top-30px margin-bottom-30px txt-center mobile-hide" src="./assets/img/mike-stecker.gif" alt="">
             <div class="">
                 <table class="mobile-hide">
