--- a/cb-swr.html
+++ b/cb-swr.html
@@ -21,8 +21,8 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2 class="mobile-d-flex d-none">Tabellen sind Mobil nicht verfügbar.<br>
-                schau gerne in der Desktop Version vorbei</h2>
+            <h2 class="mobile-d-flex d-none">Diese Tabellen sind Mobil nicht verfügbar.<br>
+                Schau gerne in der Desktopversion vorbei oder versuche es im Querformat auf deinem Handy</h2>
             <div class="w-50 mobile-hide">
                 <p>
                     Im Zusammenhang mit der Montage einer Funkantenne tauchen oftmals die Begriffe SWR, Dämpfung, Verluste auf.
