--- a/impressum.html
+++ b/impressum.html
@@ -15,6 +15,8 @@
     <div w3-include-html="./assets/template/navbar-top.html"></div>
     <!--Header-->
     <div w3-include-html="./assets/template/header.html"></div>
+    <!--Open Navbar-->
+    <div w3-include-html="./assets/template/navbar.html"></div>
     <!--Impressum Content-->
     <div class="d-flex align-center justify-center column">
         <h2>Domainbetreiber</h2>
