--- a/mitglieder-liste.html
+++ b/mitglieder-liste.html
@@ -40,15 +40,11 @@
             </div>    
         </div>
         <div class="d-flex justify-center align-center">
-            <div id="memberlist-container"  class="d-flex w-50 flex-wrap justify-center align-center margin-top-30px margin-bottom-30px"></div>
+            <div id="memberlist-container"  class="d-flex w-50 ws-100 flex-wrap justify-center align-center margin-top-30px margin-bottom-30px"></div>
             <div id="loading-spinner">
                 <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
             </div>
         </div>
-        <!-- <div  id="spinner" class="d-flex d-none justify-center align-center margin-top-30px margin-bottom-30px">
-            <div class="loader"></div>
-        </div>    
-        <div class="mobile-hide" id="allMemberList"></div> -->
     </div>
     <div class="d-flex w-100 justify-center  margin-top-30px margin-bottom-30px">
     </div>
