--- a/ts3-inst-hilfe.html
+++ b/ts3-inst-hilfe.html
@@ -21,9 +21,6 @@
 
         <div class="d-flex flex-wrap justify-center align-center column margin-top-30px margin-bottom-30px txt-center">
             <div class="w-50">
-                <h2 class="mobile-d-flex d-none">TeamSpeak Instalationshilfe Mobil nicht verfügbar</h2>
-            </div>
-            <div class="w-50 mobile-hide">
                 <p class="">
                     Wenn du nun den Clienten heruntergeladen hast, geht es an die Installation.
                     Wir empfehlen, TeamSpeak 3 mit den Standardeinstellungen zu installieren und nichts an der Installation zu verändern.
@@ -56,7 +53,7 @@
         </div>  
     
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
-        <img class="cable mobile-hide" src="./assets/img/kodax-02.gif" alt="">
+        <img class="cable" src="./assets/img/kodax-02.gif" alt="">
     </div>
 
     
