--- a/cb-bandplan11m.html
+++ b/cb-bandplan11m.html
@@ -21,12 +21,7 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2 class="mobile-hide">
-                CB-Funk Frequenzen
-            </h2>
-            <h2 class="mobile-d-flex d-none font-size">Tabellen sind Mobil nicht verfügbar.<br>
-                schau gerne in der Desktop Version vorbei</h2>
-            <div class="w-50 d-flex justify-center mobile-hide">
+            <div class="w-50 d-flex justify-center">
                 <table>
                     <thead>
                         <tr>
