--- a/ct-frequenzen.html
+++ b/ct-frequenzen.html
@@ -21,12 +21,8 @@
     <!--Content-->
 
         <div class="d-flex column justify-center align-center margin-top-30px margin-bottom-30px txt-center">
-            <h2 class="mobile-d-flex d-none not-available-headline">
-                Tabellen sind Mobil nicht verfügbar.<br>
-                schau gerne in der Desktop Version vorbei
-            </h2>
             <img class="margin-top-30px margin-bottom-30px txt-center" src="./assets/img/CBfunke2 (1).gif" alt="">
-            <div class="w-50 mobile-hide">
+            <div class="w-50">
                 <table>
                     <thead>
                         <tr>
