--- a/impressum.html
+++ b/impressum.html
@@ -81,6 +81,11 @@
             Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
             Für Fragen, Anregungen oder Kritik bitte eine Email direkt an dx-charlytango@gmx.de schicken.
         </p>
+        <p class="w-50 txt-center">    
+            Foto: Antennenanlage von DK5LA, Urheber: Reinhard Kühn, Quelle: <a target="_blank" href="https://de.wikipedia.org/wiki/Amateurfunkdienst">Wikipedia</a>, 
+            Lizenz: <a target="_blank" href="https://de.m.wikipedia.org/wiki/Datei:DK5LA.jpg">https://de.m.wikipedia.org/wiki/Datei:DK5LA.jpg</a>
+
+        </p>
     </div>
     <div  class="d-flex align-center justify-center column txt-center">
         <h2>Webmaster</h2>
