--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <div id="headerImageContainer" class="header-container">
         <div class="image-silder">
             <div class=""><img class="index-image-slider" src="./assets/img/antenne2.png" alt=""></div>
-            <div class=""><img class="index-image-slider" src="./assets/img/cb1.jpeg" alt=""></div>
-            <div class=""><img class="index-image-slider" src="./assets/img/antenne3.png" alt=""></div>
+            <div class=""><img class="index-image-slider" src="./assets/img/1.jpeg" alt=""></div>
             <div class=""><img class="index-image-slider" src="./assets/img/cb2.jpeg" alt=""></div>
             <div class=""><img class="index-image-slider" src="./assets/img/cb3.jpeg" alt=""></div>
             <div class=""><img class="index-image-slider" src="./assets/img/antenne1.png" alt=""></div>
@@ -104,7 +103,7 @@
     <div class="welcome-text d-flex justify-center">
         <div class="w-50">
             <p class="txt-center">
-                TS3 Server: 81.169.211.205<br>
+                TS3 Server: <a href="https://www.tsviewer.com/index.php?page=ts_viewer&ID=1125941" target="_blank">81.169.211.205</a><br>
                 <br>
                 Man kann auch <span>Gateways</span> einbauen direkt mitmachen ohne anfragen 
             </p>
@@ -120,7 +119,7 @@
             <p>
                 Für Anregungen, Verbesserungsvorschläge, fehlende Informationen über
                 den CT wären wir dankbar.
-                Über <a href="mailto:#">E-Mail</a> könnt ihr mit uns in Verbindung treten.
+                Über <a href="mailto: Dx-charlytango@gmx.de">E-Mail</a> könnt ihr mit uns in Verbindung treten.
             </p>
 
             <p>
