--- a/mitglieder-liste.html
+++ b/mitglieder-liste.html
@@ -33,8 +33,6 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
-    
 </head>
 <!--https://flagicons.lipis.dev/-->
 <body class="bg-page">
@@ -45,6 +43,7 @@
     <!--Header-->
     <div w3-include-html="./assets/template/header.html"></div>  
     <!--member content-->
+    <div id="searchContainerOverlay"></div>
     <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
     </div>
     <div class="member-List">
