--- a/mitglieder-liste.html
+++ b/mitglieder-liste.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/media.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css" />
     <script src="./assets/javascript/main.js"></script>
-    <script src="./assets/javascript/member-list.js"></script>
+    <script src="./assets/javascript/memberlist-update.js"></script>
     <!--jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
@@ -43,9 +43,24 @@
     <!--Header-->
     <div w3-include-html="./assets/template/header.html"></div>  
     <!--member content-->
-    <div id="searchContainerOverlay"></div>
-    <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px">
+    <div id="searchContainerOverlay">
+        <div class="search-container">
+            <form onsubmit="return false">
+                <input required placeholder="Nach Rufzeichen suchen" type="text" name="" id="">
+                <button>Suchen</button>
+            </form>  
+            <div class="dropdown">
+                <button class="dropbtn">Status</button>
+                <div class="dropdown-content">
+                    <p onclick="checkMemberFilter('all')">Alle</p>
+                    <p onclick="checkMemberFilter('active')">Aktiv</p>
+                    <p onclick="checkMemberFilter('unknown')">unbekannt</p>
+                    <p onclick="checkMemberFilter('dead')">verstorben</p>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="d-flex w-100 justify-center margin-top-30px margin-bottom-30px"></div>
     <div class="member-List">
         <div class="d-flex column w-100 justify-center align-center margin-bottom-30px">
             <div class="w-50 txt-center">
@@ -53,6 +68,20 @@
                     Mitgliederliste, CT-Kürzel nach Ländern<br>
                     Klicke auf die Länder für weitere Informationen
                 </p>
+            </div>
+            <div id="memberTableContainer" class="w-70 ws-100 d-none align-center justify-center column">
+                <h2 id="land" class="txt-center"></h2>   
+                <table class="txt-center">
+                    <thead>
+                        <tr>
+                            <th>Rufzeichen</th>
+                            <th>Name</th>
+                            <th>Stadt</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody id="currentMemberList"></tbody>    
+                </table>
             </div>    
         </div>
         <div class="d-flex justify-center align-center">
@@ -62,6 +91,12 @@
             </div>
         </div>
     </div>
+
+    <div id="memberMenu" class="member-menu-container">
+        <div  onclick="closeDetailView()" class="back">zurück</div>
+        <img onclick="openSearchContainer()" class="search" src="./assets/img/search.png">
+    </div>
+
     <div class="d-flex w-100 justify-center  margin-top-30px margin-bottom-30px">
     </div>
     <!--Footer-->
