--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="welcome-text d-flex justify-center">
         <div class="w-50">
             <p class="txt-center">
-                TS3 Server: <a href="https://www.tsviewer.com/index.php?page=ts_viewer&ID=1125941" target="_blank">81.169.211.205</a><br>
+                TS3 Server: <a title="Direkt zum Teamspeakserver" href="ts3server://Funknetzdeutschland?channel=dx-charlytango.de%20TG1" target="_blank">81.169.211.205</a><br>
                 <br>
                 Man kann auch <span>Gateways</span> einbauen direkt mitmachen ohne anfragen 
             </p>
